# blocky

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
blocky/: __main__.py  cli.py  main.py
blocky/data/: adult_hosts.txt  categories.py
blocky/db/: database.py
blocky/engine/: block_manager.py  block_page_server.py  helper_client.py  process_watcher.py
blocky/llm/: __init__.py  image_scanner.py  keyword_filter.py  models.py  providers.py  scanner.py
blocky/models/: block_rule.py  schedule.py
blocky/scheduler/: scheduler.py
blocky/ui/: application.py  main_window.py  tray.py  tray_helper.py
blocky/ui/pages/: apps_page.py  categories_page.py  dashboard_page.py  schedules_page.py  settings_page.py  websites_page.py
blocky/ui/style/: glass.css  main.css
blocky/utils/: app_discovery.py  domain_utils.py
helper/: blocky-apply.py  sudoers.template
